enum-response-derive/tests/ui/reason-no-field-at-ix.stderr
error: proc-macro derive panicked
 --> $DIR/reason-no-field-at-ix.rs:4:10
  |
4 | #[derive(EnumResponse)]
  |          ^^^^^^^^^^^^
  |
  = help: message: [error(reason_field = 1)]: No tuple field at 1 found for Tuple

error: aborting due to previous error

