enum-response-derive/tests/ui/reason-no-field-at-ix.rs
#[macro_use]
extern crate enum_response_derive;

#[derive(EnumResponse)]
enum Error {
    #[response(reason_field = 1)]
    Tuple(String)
}

